--- a/applications/garden/design/admin.css
+++ b/applications/garden/design/admin.css
@@ -978,6 +978,9 @@ table.SelectionGrid td {
 	padding: 16px;
 	vertical-align: top;
 }
+table.Themes td {
+   min-width: 235px;
+}
 table.Themes td h4 {
 	padding: 6px 0;
 }
@@ -988,8 +991,54 @@ table.SelectionGrid td.EmptyCol,
 table.SelectionGrid td.LastCol {
 	border-left: 1px solid #C0E7F5;
 }
-
-
+table.SelectionGrid td:hover {
+   background: #F2FBFF;
+}
+table.SelectionGrid td.EmptyCol:hover {
+   background: none;
+}
+table.SelectionGrid h4 {
+   font-size: 16px;
+   color: #02455B;
+   text-shadow: 0 1px 0 #fff;
+}
+table.SelectionGrid em {
+   display: block;
+   padding: 3px 0 8px;
+   font-style: oblique;
+}
+table.SelectionGrid img {
+	margin-top: 12px;
+}
+table.SelectionGrid div.Buttons {
+   float: right;
+   width: 70px;
+   text-align: center;
+}
+table.SelectionGrid div.Buttons a {
+   display: block;
+   padding: 2px 4px;
+   margin: 4px 0;
+}
+table.Themes td.HasPreview div.Buttons {
+	padding-top: 59px;
+}
+table.Themes div.Buttons a {
+	margin: 8px 0 0;
+}
+table.SelectionGrid dl {
+	padding: 0 0 10px;
+}
+table.SelectionGrid dl dt {
+	display: inline;
+   color: #000;
+   border-right: 1px solid #C0E7F5;
+   padding: 4px 6px 4px 0;
+	margin: 0 4px 0 0;
+}
+table.SelectionGrid dl dd {
+	display: inline;
+}
 
 /* =================================================================== Footer */
 #Foot {
