Added a convenience jquery function and related css def for adding spinners beside clicked buttons.

--- a/applications/garden/design/admin.css
+++ b/applications/garden/design/admin.css
@@ -290,6 +290,10 @@ input.Button {
    padding: 0 20px;
    background: url('progress.gif') center center no-repeat;
 }
+.AfterButtonLoading {
+   background: url('progress.gif') center center no-repeat;
+   padding: 0 20px;
+}
 .Progress {
    padding: 10px 40px 10px 0;
    background: url('progress.gif') center center no-repeat;
