Fix for wordbreak for breadcrumbs (plugins permissions)

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -1582,6 +1582,14 @@ body.managecategories table td.Last {
 	white-space: nowrap;
 }
 
+li.RolePermissions table.CheckBoxGrid tbody tr th a {
+	white-space:nowrap;
+}
+
+li.RolePermissions table.CheckBoxGrid tbody tr th a span.Parent {
+	display:inline;
+}
+
 /* Summary Tables */
 div.Summary {
    clear: left;
