--- a/applications/dashboard/design/style.css
+++ b/applications/dashboard/design/style.css
@@ -18,6 +18,8 @@ Welcome to the Generic Style CSS File! Some things you should know:
 */
 
 /* ================================================================ Reset CSS */
+html {font-size: 100.01%;}
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -30,12 +32,13 @@ table, caption, tbody, tfoot, thead, tr, th, td {
    padding: 0;
    border: 0;
    outline: 0;
-   font-weight: inherit;
-   font-style: inherit;
-   font-size: 100%;
-   font-family: inherit;
    vertical-align: baseline;
 }
+
+fieldset, form, label, legend,input,select,textarea,div,table, caption, tbody, tfoot, thead, tr, th, td {
+   font: inherit;
+}
+
 /* remember to define focus styles! */
 :focus {
    outline: 0;
@@ -69,7 +72,6 @@ blockquote, q {
 body {
    color: #000;
 	font-family: 'lucida grande','Lucida Sans Unicode', tahoma, sans-serif;
-	font-size: 75%;
 	line-height: 1.7em;
    background: #fff;
    margin: 0;
@@ -183,7 +185,6 @@ a.Button,
 .Button {
    cursor: pointer;
    margin: 0;
-   font-size: 11px;
    padding: 4px;
    background: url('images/buttonbg.png') repeat-x center left #f8f8f8;
    color: #02475A;
@@ -231,7 +232,6 @@ div.Messages {
    margin: 0 !important;
    padding: 0 !important;
    list-style: none !important;
-   font-size: 12px;
    display: block;
    width: 100%;
 }
@@ -504,7 +504,6 @@ body #Head h1 {
 	display: block;
    padding: 0 7px;
    white-space: nowrap;
-   font-size: 11px;
    height: 28px;
 }
 * html #Menu a  {
@@ -524,7 +523,6 @@ body #Head h1 {
    -webkit-border-radius: 2px;
    border-radius: 2px;
    padding: 0 2px;
-   font-size: 9px;
    line-height: 12px;
    font-weight: normal;
 }
@@ -554,7 +552,6 @@ ul.Options li {
    display: block;
    list-style: none outside none;
    padding: 0;
-   font-size: 11px;
    line-height: 22px;
 }
 ul.Options h3 {
@@ -579,7 +576,6 @@ ul.Options a {
    display: block;
    position: relative;
    white-space: nowrap;
-   font-size: 11px;
 }
 ul.Options ul li {
    display: block;
@@ -589,7 +585,6 @@ ul.Options li.Parent strong {
    display: block;
    padding: 4px;
    margin: 3px 4px 0 0;
-   font-size: 10px;
    font-weight: normal;
    background: url('images/buttonbg.png') repeat-x center left #f8f8f8;
    border: 1px solid #bbb;
@@ -728,17 +723,14 @@ div.Box dl {
    overflow: hidden;
 }
 div.Box dl dt {
-	font-size: 12px;
    float: left;
    width: 80px;
    color: #555;
 }
 div.Box dl dd {
-	font-size: 12px;
    margin-left: 80px;
 }
 div.Box p {
-   font-size: 100%;
    padding: 0 0 4px;
    color: #555;
 }
@@ -751,11 +743,9 @@ ul.PanelActivity li {
    border-bottom: 1px solid #abdafb;
    padding: 2px 4px;
 	color: #555;
-	font-size: 11px;
 	line-height: 1.6;
 }
 ul.PanelActivity li a {
-	font-size: 13px;
 }
 ul.PanelActivity li a.Name {
 	margin-right: 2px;
@@ -766,15 +756,12 @@ ul.PanelActivity span {
 ul.PanelActivity p {
 	padding: 0 4px;
 	display: inline;
-	font-size: 90%;
 }
 ul.PanelActivity li em {
 	padding-left: 5px;
 	color: #777;
-	font-size: 80%;
 }
 ul.PanelActivity li div.Story {
-	font-size: 85%;
 }
 ul.PanelInfo li {
    background: #e3f4ff;
@@ -800,7 +787,6 @@ ul.PanelInfo li a {
    float: left;
 }
 ul.PanelInfo div.Meta {
-   font-size: 11px;
 }
 ul.PanelInfo div.Meta span,
 ul.PanelInfo div.Meta strong {
@@ -821,7 +807,6 @@ ul.PanelInfo div.Meta strong {
 	*/
 	background: #FF0;
 	color:#000;
-	font-size:9px;
 	font-weight:bold;
 	padding: 3px;
 	line-height: 1;
@@ -988,11 +973,9 @@ ul.DataList div.Title a {
    font-weight: bold;
 }
 ul.DataList div.Meta {
-   font-size: 11px;
    color: #70727c;
 }
 ul.DataList div.Excerpt {
-   font-size: 12px;
 	line-height: 1.4;
 }
 ul.DataList div.Excerpt a {
@@ -1019,7 +1002,6 @@ ul.DataList div.Meta strong {
 	*/
 	background: #FF0;
 	color:#000;
-	font-size:9px;
 	font-weight:bold;
 	padding: 3px;
 	line-height: 1;
@@ -1031,7 +1013,6 @@ ul.DataList a.Delete {
    width: auto;
    padding: 0 5px;
    margin: 0 1px 0 0;
-   font-size: 11px;
    font-weight: normal;
    border-radius: 2px;
    -moz-border-radius: 2px;
@@ -1053,7 +1034,6 @@ ul.DataList a.Delete:focus {
 ul.DataList div.Photo {
 	float: left;
 	padding: 0 10px 0 0;
-	font-size: 11px;
 }
 ul.DataList div.Photo img {
 	display: block;
@@ -1105,7 +1085,6 @@ ul.Activities div.Excerpt {
 }
 ul.Activities li.Condensed div.Excerpt {
 	color: #000;
-	font-size: 13px;
 	padding: 0 0 0 4px;
 }
 ul.Activities div.Excerpt a,
@@ -1144,7 +1123,6 @@ ul.Activities ul.DataList a.Title,
 ul.Activities ul.DataList div.Title,
 ul.Activities ul.DataList div.Title a,
 ul.Activities ul.DataList div.Excerpt p {
-	font-size: 13px;
 	line-height: 1;
 }
 ul.HasPhoto div.Excerpt,
@@ -1162,7 +1140,6 @@ ul.Activities ul.DataList div.Photo img {
 }
 ul.Activities a.CommentLink,
 ul.Activities a.CommentLink:hover {
-	font-size: 12px;
    cursor: text;
    background: #fff;
    color: #bbb !important;
@@ -1181,10 +1158,8 @@ ul.Activities li.CommentForm textarea.TextBox {
 	min-height: 40px;
    height: 40px;
    margin-bottom: 2px;
-	font-size: 12px;
 }
 ul.Activities li.CommentForm input.Button {
-	font-size: 12px;
 	box-shadow: 0 0 1px #999;
 	-moz-box-shadow: 0 0 1px #999;
 	-webkit-box-shadow: 0 0 1px #999;  
@@ -1206,7 +1181,6 @@ ul.MessageList li.Item {
 	padding: 10px 4px 4px 10px;
 }
 ul.MessageList div.Meta {
-   font-size: 11px;
    color: #777;
 	min-height: 40px;
 }
@@ -1261,7 +1235,6 @@ div.Preview div.Message,
 ul.MessageList div.Message {
    clear: both;
    line-height: 140%;
-   font-size: 100%;
 	word-wrap: break-word;
 }
 div.Preview div.Message,
@@ -1328,7 +1301,6 @@ div.Message h3 { font-size: 18px; }
 div.Message h4 { font-size: 16px; }
 div.Message h5 { font-size: 14px; }
 div.Message div.ImageResized {
-	font-size: 11px;
 	font-weight: normal;
 	cursor: pointer;
 	margin-bottom: 10px;
@@ -1458,7 +1430,6 @@ div.User h1 {
 }
 #Status a.Change {
    text-transform: lowercase;
-   font-size: 11px;
    text-decoration: none;
 }
 #Status a:hover {
@@ -1499,7 +1470,6 @@ form.Activity textarea {
 	border: 1px solid #C0E7F5;
 }
 #Form_Invitation table label {
-   font-size: 12px;
    padding: 0px;
 }
 #Form_Invitation table tr.Last td,
@@ -1527,7 +1497,6 @@ form.Activity textarea {
 }
 #Form_Invitation table thead th {
    font-weight: bold;
-   font-size: 13px;
    color: #000;
 }
 #Form_Invitation table.AltRows tr.Alt th,
@@ -1611,7 +1580,6 @@ div.Tabs li.Active a {
 }
 div.Tabs li a span {
    line-height: 1;
-   font-size: 80%;
    padding: 0 3px;
    border-radius: 3px;
    -webkit-border-radius: 3px;
@@ -1662,7 +1630,6 @@ div.Headings div.ItemHeading {
 	line-height: 2;
 }
 div.Headings div.MetaHeading {
-	font-size: 11px;
 }
 
 /* ======================================================== Thumbnail Cropper */
@@ -1827,7 +1794,6 @@ div.Popup .Footer {
 	text-align: right;
 }
 div.Popup .Footer input.Button {
-	font-size: 11px;
 	margin-right: 2px;
 }
 div.Popup h3 {
@@ -1842,7 +1808,6 @@ div.Popup div.Legal p {
 	padding: 6px 0 10px;
 }
 div.Popup small {
-	font-size: 11px;
 }
 div.Popup form p {
 	padding: 0;
@@ -1918,7 +1883,6 @@ div.Legal strong {
    text-align: center;
    margin: 2px 0;
    padding: 4px 9px;
-   font-size: 13px;
    color: #ddd;
    line-height: 1;
 }
@@ -2127,7 +2091,6 @@ div.CommentForm a.Cancel {
 #DiscussionForm ul.PostOptions label {
    display: inline;
    font-weight: normal;
-   font-size: 95%;
    color: #555;
 }
 
@@ -2162,7 +2125,6 @@ textarea.MultiComplete {
    when scroll mode will be used
    */
    /*width: 100%;*/
-   font-size: 12px;
    /* 
    it is very important, if line-height not setted or setted 
    in relative units scroll will be broken in firefox
@@ -2448,7 +2410,6 @@ body.Entry form ul li label {
 }
 body.Entry form ul li label.CheckBoxLabel,
 body.Entry form ul li label.RadioLabel {
-	font-size: 12px;
 	font-weight: normal;
    width: auto;
 }
@@ -2518,7 +2479,6 @@ body#dashboard_entry_signin form ul li label,
 body#dashboard_entry_index form ul li label,
 body#dashboard_entry_password form ul li label,
 body#dashboard_entry_handshake form ul li label {
-	font-size: 13px;
 	line-height: 1.5;
 	padding: 0;
 }
@@ -2545,7 +2505,6 @@ body#dashboard_entry_index ul li label.CheckBoxLabel,
 div.SignInPopup ul li label.CheckBoxLabel {
 	color: #777;
 	display: inline;
-	font-size: 12px;
 	font-weight: normal;
 	margin: 10px 0 0 10px;
 }
@@ -2664,7 +2623,6 @@ div.ConnectInfo span.Name {
 	padding-left: 46px;
 	font-weight: bold;
 	line-height: 1;
-	font-size: 13px;
 	color: #444;
 	display: block;
 }
@@ -2682,7 +2640,6 @@ div.SignInPopup form ul li label,
 body#dashboard_entry_password form ul li label,
 body#dashboard_entry_signin form ul li label,
 body#dashboard_entry_index form ul li label {
-	font-size: 13px;
 	line-height: 1.5;
 	padding: 0;
 }
@@ -2692,7 +2649,6 @@ div.SignInPopup form ul li#ConnectPassword label {
 }
 div.Connect .FinePrint,
 div.SignInPopup .FinePrint {
-	font-size: 11px;
 	color: #777;
 }
 body#dashboard_entry_password input.InputBox,
@@ -2706,7 +2662,6 @@ div.Connect .ExistingUsername,
 div.SignInPopup .ExistingUsername {
 	font-weight: bold;
 	line-height: 1;
-	font-size: 13px;
 	color: #000;
 	display: block;
 }
