スタイルシート調整

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -1567,7 +1567,7 @@ table.AltRows tr.Enabled th,
 table.AltRows tr.Enabled td,
 table.AltColumns tr.Enabled th,
 table.AltColumns tr.Enabled td {
-	background: #ff8;
+	background: #dbffb8;
 }
 .CheckBoxGrid tbody th,
 .CheckBoxGrid thead td,
