$RuleName will be checked below (cherry-picking from commit 80313b552f96efa0b4c64758b246cb66504c869b) Gdn. Breaks long line for sql code (cherry-picking from commit Issues #758 #763 Removed trim from ValidateDecimal() (cherry-picking from commit fd5e805142f1b37c5a4f90d2615f779af56d577b)

--- a/applications/dashboard/design/admin.css
+++ b/applications/dashboard/design/admin.css
@@ -1835,3 +1835,7 @@ ol.Sortable {
 	font-size: 12px;
 	display: block;
 }
+
+#dashboard_utility_structure #Content table tbody tr td pre {
+	white-space:pre-wrap;
+}
